--- a/myproject/templates/FAQ.html
+++ b/myproject/templates/FAQ.html
@@ -257,7 +257,7 @@
 <footer>
 <p>&copy; 
      We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and Lheidli T'enneh. <br>
-    2025 CapstoneProject. All rights reserved.</p>
+    2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
 </footer>
 
 </body>
