--- a/myproject/templates/about.html
+++ b/myproject/templates/about.html
@@ -145,9 +145,8 @@
     </div>
     <footer>
         <p>&copy;
-            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh,
-            and Lheidli T'enneh. <br>
-            2025 CapstoneProject. All rights reserved.</p>
+            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and Lheidli T'enneh. <br>
+            2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
     </footer>
 
 </body>
