--- a/myproject/templates/signup.html
+++ b/myproject/templates/signup.html
@@ -43,7 +43,7 @@
       {% else %}
           <p><a href="/home/">Home</a> | <a href="/login/">Login</a> </p>
       {% endif%}
-          <a href="/about/">About</a> | <a href="/plants/">Products</a> | <a href="/faq/">FAQ</a> | <a href="/contact/">Contact</a>
+          <a href="/about/">About</a> | <a href="/plants/">Plants</a> | <a href="/faq/">FAQ</a> | <a href="/contact/">Contact</a>
           </nav>
     </header>
 
@@ -57,7 +57,7 @@
     <footer>
         <p>&copy; 
      We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and Lheidli T'enneh. <br>
-    2025 CapstoneProject. All rights reserved.</p>
+    2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
         </footer>
 
 </body>
