--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -113,7 +113,7 @@
 
 <body>
   <header>
-    <h1>Welcome the wonderful website of plant information!</h1>
+    <h1>Sacred Circle Macikwanâsa</h1>
     <nav aria-label="Main navigation">
       {% if is_authenticated %}
       <h1> {{ username }}!</h1>
@@ -136,7 +136,7 @@
       alt="Image of a bialowieza-forrest-1369627">
 
     <div class="content">
-      <h1> Welcome to the wonderful website of plant information!</h1>
+      <h1> Welcome to Welcome to Sacred Circle Macikwanâsa!</h1>
       <p>
         The fauna that surrounds us contains magical secrets. Explore our site to learn more.
       </p>
@@ -147,7 +147,7 @@
     <p>&copy;
       We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and
       Lheidli T'enneh. <br>
-      2025 CapstoneProject. All rights reserved.</p>
+      2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
   </footer>
 </body>
 
