html edits contd

--- a/myproject/templates/plants.html
+++ b/myproject/templates/plants.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>Plants</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,7 +128,7 @@
             align-items: center;
             background-color: green;
             border-radius: 5px;
-            box-shadow: 10px 10px 100px gold">
+            box-shadow: 10px 10px 100px greenyellow">
             <p>
             <h2>placeholder</h2>
             <ul>
@@ -150,9 +150,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: orange;
+            background-color: green;
             border-radius: 5px;
-            box-shadow: 10px 10px 100px gold">
+            box-shadow: 10px 10px 100px green">
             <p>
             <h2>
                 placeholder
