--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rye&family=Tagesschrift&display=swap" rel="stylesheet">
 
-  <title>Home</title>
+  <title>Sacred Circle Macikwanâsa</title>
   <style>
     header {
       font-family: 'Abril Fatface';
@@ -132,11 +132,11 @@
 
   <div>
 
-    <img src="https://images.freeimages.com/images/large-previews/852/bialowieza-forrest-1369627.jpg?fmt=webp&w=500"
-      alt="Image of a bialowieza-forrest-1369627">
+    <img src="file:///C:/Users/User/Desktop/CapstoneV.3/myproject/Images/Logo.png"
+      alt="Image of Sacred Circle Macikwanâsa logo">
 
     <div class="content">
-      <h1> Welcome to Welcome to Sacred Circle Macikwanâsa!</h1>
+      <h1> Welcome to Sacred Circle Macikwanâsa!</h1>
       <p>
         The fauna that surrounds us contains magical secrets. Explore our site to learn more.
       </p>
