--- a/myproject/templates/FAQ.html
+++ b/myproject/templates/FAQ.html
@@ -13,7 +13,7 @@
     <style>
         header {
             font-family: "Rye", serif;
-            background-color: goldenrod;
+            background-color: green;
             color: black;
             padding: 1rem 0;
             text-align: center;
@@ -127,7 +127,7 @@
         footer {
             text-align: center;
             padding: 1rem 0;
-            background-color: goldenrod;
+            background-color: green;
             color: white;
             margin-top: 2rem;
         }
@@ -138,7 +138,7 @@
 
 
 <header>
-    <h1>Big Chief's Meadery</h1>
+    <h1>Sacred Circle Macikwanâsa</h1>
     <nav aria-label="Main navigation">
       {% if is_authenticated %}
     <h1>Welcome, {{ username }}!</h1>
@@ -149,7 +149,7 @@
 {% else %}
     <p><a href="/home/">Home</a> | <a href="/signup/">Sign Up</a> | <a href="/login/">Login</a> </p>
 {% endif%}
-    <a href="/about/">About</a> | <a href="/products/">Products</a>| <a href="/faq/">FAQ</a> | <a href="/contact/">Contact</a>
+    <a href="/about/">About</a> | <a href="/products/">Plants</a>| <a href="/faq/">FAQ</a> | <a href="/contact/">Contact</a>
     </nav>
   </header>
 </header>
@@ -184,46 +184,23 @@
       
       <div class="faq-item">
         <button class="faq-question">
-          What is mead?
+          What is a plant application?
           <span class="icon">+</span>
         </button>
         <div class="faq-answer">
-          <p>Mead is an alcoholic beverage made by fermenting honey mixed with water, often with the addition of fruits, spices, grains, or hops. 
-            The defining characteristic of mead is that the majority of its fermentable sugar comes from honey. 
-            Alcohol content in mead typically ranges from about 3.5% to over 20% by volume.
-            Mead can be still, carbonated, or naturally sparkling, and its flavor profile varies widely-it can be dry, semi-sweet, or sweet, depending on the recipe and fermentation process. <br> <br>
-            There are many varieties of mead, including:
-            <ul>
-            <li>Show mead: Made with just honey, water, and yeast.</li>
-
-            <li>Melomel: Mead with added fruit.</li>
-
-            <li>Metheglin: Mead with added spices or herbs.</li>
-
-            <li>Braggot: Mead made with both honey and malted barley.</li>
-
-            <li>Cyser: Mead made with honey and apple juice or cider.</li>
-            </ul>
+          <p> placeholder:
+            
         </p>
         </div>
       </div>
       
       <div class="faq-item">
         <button class="faq-question">
-          What flavours of mead do you offer?
+          Do you take suggestions for new plants to add to the system?
           <span class="icon">+</span>
         </button>
         <div class="faq-answer">
-          <p>The mead flavours we currently offer are:
-            <ul>
-            <li>Chief's Ambrosia: Caramelized honey, orange & clove mead. (Type: Metheglin/Melomel)</li> <br>
-            <li>Big Blue Chew: Blueberry Honey Mead. (Type: Melomel)</li><br>
-            <li>Belve's Elixir: Cranberry Orange Honey Mead. (Type: Melomel)</li><br>
-            <li>Spazzarooni's Special Blend: Apple Mint Honey Mead. (Type: Type: Metheglin/Melomel)</li><br>
-            <li>Diezels Oil Leak: Blackberry Caramelized Honey Mead. (Type: Melomel)</li><br>
-            <li>Grizz's Sparkling Golden Delight: Sparkling Golden Apple Caramelized Honeywine.(Type: Sparkling Show Mead)</li><br>
-            <li>Remi's Classic Enchantment: Classic Oaked Honeymead.(Type: Oak Aged Show Mead)</li><br>
-            </ul>
+          <p>Yes, please visit our contact us page.
         </p>
         </div>
       </div>
@@ -241,11 +218,11 @@
       
       <div class="faq-item">
         <button class="faq-question">
-          How can I contact support?
+          What are the benefits of being a member?
           <span class="icon">+</span>
         </button>
         <div class="faq-answer">
-          <p>You can contact our support team via email at bigchiefsmeadery@gmail.com or by phone number at: +1 (236) 888 2308.</p>
+          <p>Currently, members receive access to a weekly featured plant and take priority for adding reccommended plants to the system.</p>
         </div>
       </div> 
       
