--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -132,8 +132,7 @@
 
   <div>
 
-    <img src="file:///C:/Users/User/Desktop/CapstoneV.3/myproject/Images/Logo.png"
-      alt="Image of Sacred Circle Macikwanâsa logo">
+    <img src="Images/Logo.png" alt="Image of Sacred Circle Macikwanâsa logo">
 
     <div class="content">
       <h1> Welcome to Sacred Circle Macikwanâsa!</h1>
