--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -132,7 +132,7 @@
 
   <div>
 
-    <img src="Images/Logo.png" alt="Image of Sacred Circle Macikwanâsa logo">
+    <img src="/myproject/Images/Logo.png" alt="Image of Sacred Circle Macikwanâsa logo">
 
     <div class="content">
       <h1> Welcome to Sacred Circle Macikwanâsa!</h1>
