--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,5 +1,6 @@
 <form class="contact-form" method="POST">
   {% csrf_token %} <!-- Generates hidden input -->
+  {% load static %}
   ...
 </form>
 
@@ -131,8 +132,7 @@
   </header>
 
   <div>
-
-    <img src="/myproject/Images/Logo.png" alt="Image of Sacred Circle Macikwanâsa logo">
+    <img src="{% static 'Images/Logo.png' %}" alt="Image of Sacred Circle Macikwanâsa logo">
 
     <div class="content">
       <h1> Welcome to Sacred Circle Macikwanâsa!</h1>
