--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -12,17 +12,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rye&family=Tagesschrift&display=swap" rel="stylesheet">
 
-  <title>Sacred Circle </br>
-    Macikwanâsa</title>
+  <title>Sacred Circle Macikwanâsa</title>
+
   <style>
     header {
       background-image: url("{% static 'Images/BannerV.2.jpg' %}");
-      background-size: contain;
+      background-size: cover;
       background-position: center;
       height: auto;
       width: auto;
       margin: 0;
-      padding: 250;
+      padding: 270;
       border: none;
     }
 
@@ -32,18 +32,13 @@
     }
 
     img {
-      width: 100%;
-      /* Make image fill the header width */
-      height: auto;
-      /* Maintain aspect ratio */
-      display: block;
-      /* Remove inline spacing */
+      height: 300px;
+      padding: 100px;
+      margin-right: 10px;
+      justify-content: left;
+      align-items: left;
       float: left;
-      /* Avoid floating conflicts */
-      clip-path: circle (45%);
-      /* Remove clip-path for full display */
-      shape-outside: circle (45%);
-      margin: 0;
+       /* adds spacing from adjacent content */
     }
 
     div {
@@ -114,8 +109,8 @@
 
 <body>
   <header>
-    <img src="{% static 'Images/Banner.jpg' %}" alt="Image of Sacred Circle Macikwanâsa's banner">
-    <h1>Sacred Circle Macikwanâsa</h1>
+    
+
     <nav aria-label="Main navigation">
       {% if is_authenticated %}
       <h1> {{ username }}!</h1>
@@ -127,7 +122,7 @@
       {% else %}
       <p><a href="/signup/">Sign Up</a> | <a href="/login/">Login</a> </p>
       {% endif%}
-      <a href="/about/">About</a> | <a href="/plants/">Plants</a>| <a href="/faq/">FAQ</a> | <a
+      <a href="/about/">About</a> | <a href="/plants/">Plants</a> | <a href="/faq/">FAQ</a> </br> | <a
         href="/contact/">Contact</a>
     </nav>
   </header>
