--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -16,7 +16,7 @@
 
   <style>
     header {
-      background-image: url("{% static 'Images/BannerV.2.jpg' %}");
+      background-image: url("{% static 'Images/BannerV.3.png' %}");
       background-size: cover;
       background-position: center;
       height: auto;
@@ -120,7 +120,7 @@
       {% else %}
       <p><a href="/signup/">Sign Up</a> | <a href="/login/">Login</a> </p>
       {% endif%}
-      <a href="/about/">About</a> | <a href="/plants/">Plants</a> | <a href="/faq/">FAQ</a> </br> | <a
+      <a href="/about/">About</a> | <a href="/plants/">Plants</a> | <a href="/faq/">FAQ</a> | <a
         href="/contact/">Contact</a>
     </nav>
   </header>
