--- a/myproject/templates/signup.html
+++ b/myproject/templates/signup.html
@@ -5,6 +5,7 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +25,7 @@
             text-align: center;
             text-shadow: 0 0 3px white;
         }
-        
+
         header img {
             display: none;
         }
@@ -44,16 +45,17 @@
     <header>
         <nav aria-label="Main navigation">
             {% if is_authenticated %}
-          <h1> {{ username }}!</h1>
-          <form method="POST" action="/logout/">
-              {% csrf_token %}
-              <button type="submit">Logout</button>
-          </form>
-      {% else %}
-          <p><a href="/home/">Home</a> | <a href="/login/">Login</a> </p>
-      {% endif%}
-          <a href="/about/">About</a> | <a href="/plants/">Plants</a> | <a href="/faq/">FAQ</a> | <a href="/contact/">Contact</a>
-          </nav>
+            <h1> {{ username }}!</h1>
+            <form method="POST" action="/logout/">
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+            </form>
+            {% else %}
+            <p><a href="/home/">Home</a> | <a href="/login/">Login</a> </p>
+            {% endif%}
+            <a href="/about/">About</a> | <a href="/plants/">Plants</a> | <a href="/faq/">FAQ</a> | <a
+                href="/contact/">Contact</a>
+        </nav>
     </header>
 
     <h2>Create a New Account</h2>
@@ -64,10 +66,12 @@
     </form>
     <p>Already have an account? <a href="/login/">Login</a></p>
     <footer>
-        <p>&copy; 
-            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and Lheidli T'enneh. <br>
+        <p>&copy;
+            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh,
+            and Lheidli T'enneh. <br>
             2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
     </footer>
 
 </body>
+
 </html>
