--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -1,7 +1,7 @@
 <form class="contact-form" method="POST">
   {% csrf_token %} <!-- Generates hidden input -->
   {% load static %}
-  ...
+  
 </form>
 
 <head>
@@ -21,13 +21,22 @@
       background-position: center;
       height: auto;
       width: auto;
-      margin: 0;
+      margin: 10;
       padding: 270;
       border: none;
     }
 
     header img {
       display: none;
+    }
+
+    header nav {
+      position: absolute;
+      bottom: 10px;              
+      left: 50%;
+      transform: translateX(-50%);  
+      text-align: center;
+      width: 100%; 
     }
 
     img {
@@ -56,14 +65,16 @@
     }
 
     nav {
-      margin-top: 10px;
+      margin-top: 0px;
     }
 
     nav a {
       color: black;
+      text-align: bottom;
       text-decoration: underline;
-      margin: 0 15px;
-      font-size: 1.2em;
+      margin: 10 10;
+      padding: 0;
+      font-size: 2.5em;
     }
 
     nav a:hover {
