--- a/myproject/templates/signup.html
+++ b/myproject/templates/signup.html
@@ -67,8 +67,7 @@
     <p>Already have an account? <a href="/login/">Login</a></p>
     <footer>
         <p>&copy;
-            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh,
-            and Lheidli T'enneh. <br>
+            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and Lheidli T'enneh. <br>
             2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
     </footer>
 
