--- a/myproject/templates/contact.html
+++ b/myproject/templates/contact.html
@@ -63,7 +63,8 @@
     </h2>
     
     
-    <img src = "https://images.freeimages.com/image/large-previews/c01/abstract-leaf-background-5695897.jpeg?fmt=webp&w=500" style= "width:500px;
+    <img src = "https://images.freeimages.com/image/large-previews/c01/abstract-leaf-background-5695897.jpeg?   fmt=webp&w=500" 
+        style= "width:500px;
             height: 300px;
             border: 10px double black;
             padding: 10px;
@@ -93,7 +94,7 @@
             <button type="submit"> Send Message</button>
         </form> 
         <div class="contact-info">
-            <p>Email: crazyaboutplants@samplegmail.com</p>
+            <p>Email: sacredcirclemacikwanasa@gmail.com</p>
             <p>Phone: +1 (234) 567 8910</p>
         </div>
     </div>
