--- a/myproject/templates/plants.html
+++ b/myproject/templates/plants.html
@@ -23,7 +23,7 @@
             text-shadow: 0 0 3px white;
         }
 
-        h2 {
+        nav {
             font-family: "Rye", serif;
             text-align: center;
             text-decoration: underline;
@@ -100,7 +100,7 @@
 
 <body>
     <header>
-        <h1>Welcome to Sacred Circle Macikwanâsa</h1>
+        
         <nav aria-label="Main navigation">
             {% if is_authenticated %}
             <h1>Welcome, {{ username }}!</h1>
