--- a/myproject/templates/plants.html
+++ b/myproject/templates/plants.html
@@ -100,7 +100,7 @@
 
 <body>
     <header>
-        
+
         <nav aria-label="Main navigation">
             {% if is_authenticated %}
             <h1>Welcome, {{ username }}!</h1>
@@ -177,6 +177,78 @@
             </p>
         </div>
 
+        <div class="item3">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=2c53434a31&attid=0.1&permmsgid=msg-a:r-3346358501543158164&th=19664bbe28a1dcda&view=att&disp=safe&realattid=f_m9uhxfjj0&zw"
+                style="height: 300px;
+            border: 10px double black;
+            padding: 10px;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: green;
+            border-radius: 5px;
+            box-shadow: 10px 10px 100px green">
+            <p>
+            <h2>
+                placeholder
+            </h2>
+            <ul>
+                <li>
+                    <u>placeholder </u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder </li><br>
+                <li><u>placeholder</u>
+                    placeholder</li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li>
+            </ul>
+
+            </p>
+        </div>
+
+        <div class="item4">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=2c53434a31&attid=0.1&permmsgid=msg-a:r-3346358501543158164&th=19664bbe28a1dcda&view=att&disp=safe&realattid=f_m9uhxfjj0&zw"
+                style="height: 300px;
+            border: 10px double black;
+            padding: 10px;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: green;
+            border-radius: 5px;
+            box-shadow: 10px 10px 100px green">
+            <p>
+            <h2>
+                placeholder
+            </h2>
+            <ul>
+                <li>
+                    <u>placeholder </u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder </li><br>
+                <li><u>placeholder</u>
+                    placeholder</li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li>
+            </ul>
+
+            </p>
+        </div>
+
     </div>
     </div>
     </div>
@@ -186,7 +258,8 @@
 
     <footer>
         <p>&copy;
-            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh, and Lheidli T'enneh. <br>
+            We acknowledge that we live, play, and work on the traditional unceded lands of the Dënéndeh, Dakeł Keyoh,
+            and Lheidli T'enneh. <br>
             2025 Sacred Circle Macikwanâsa. All rights reserved.</p>
     </footer>
 </body>
