plants 4 quadrant examples

--- a/myproject/templates/plants.html
+++ b/myproject/templates/plants.html
@@ -161,7 +161,7 @@
                     align-items: center;
                     background-color: whitesmoke;
                     border-radius: 5px;
-                    box-shadow: 10px 10px 100px greenyellow">
+                    box-shadow: 10px 10px 100px black">
             <p>
             <h2>placeholder</h2>
             <ul>
@@ -183,9 +183,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: green;
+            background-color: whitesmoke;
             border-radius: 5px;
-            box-shadow: 10px 10px 100px green">
+            box-shadow: 10px 10px 100px black">
             <p>
             <h2>
                 placeholder
@@ -219,9 +219,9 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: green;
+            background-color: yellow;
             border-radius: 5px;
-            box-shadow: 10px 10px 100px green">
+            box-shadow: 10px 10px 100px yellow">
             <p>
             <h2>
                 placeholder
@@ -255,9 +255,153 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: green;
+            background-color: yellow;
             border-radius: 5px;
-            box-shadow: 10px 10px 100px green">
+            box-shadow: 10px 10px 100px yellow">
+            <p>
+            <h2>
+                placeholder
+            </h2>
+            <ul>
+                <li>
+                    <u>placeholder </u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder </li><br>
+                <li><u>placeholder</u>
+                    placeholder</li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li>
+            </ul>
+
+            </p>
+        </div>
+
+        <div class="item5">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=2c53434a31&attid=0.1&permmsgid=msg-a:r-3346358501543158164&th=19664bbe28a1dcda&view=att&disp=safe&realattid=f_m9uhxfjj0&zw"
+                style="height: 300px;
+            border: 10px double black;
+            padding: 10px;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: red;
+            border-radius: 5px;
+            box-shadow: 10px 10px 100px red">
+            <p>
+            <h2>
+                placeholder
+            </h2>
+            <ul>
+                <li>
+                    <u>placeholder </u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder </li><br>
+                <li><u>placeholder</u>
+                    placeholder</li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li>
+            </ul>
+
+            </p>
+        </div>
+
+        <div class="item6">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=2c53434a31&attid=0.1&permmsgid=msg-a:r-3346358501543158164&th=19664bbe28a1dcda&view=att&disp=safe&realattid=f_m9uhxfjj0&zw"
+                style="height: 300px;
+            border: 10px double black;
+            padding: 10px;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: red;
+            border-radius: 5px;
+            box-shadow: 10px 10px 100px red">
+            <p>
+            <h2>
+                placeholder
+            </h2>
+            <ul>
+                <li>
+                    <u>placeholder </u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder </li><br>
+                <li><u>placeholder</u>
+                    placeholder</li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li>
+            </ul>
+
+            </p>
+        </div>
+
+        <div class="item7">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=2c53434a31&attid=0.1&permmsgid=msg-a:r-3346358501543158164&th=19664bbe28a1dcda&view=att&disp=safe&realattid=f_m9uhxfjj0&zw"
+                style="height: 300px;
+            border: 10px double black;
+            padding: 10px;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: black;
+            border-radius: 5px;
+            box-shadow: 10px 10px 100px black">
+            <p>
+            <h2>
+                placeholder
+            </h2>
+            <ul>
+                <li>
+                    <u>placeholder </u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li><br>
+                <li><u>placeholder</u>
+                    placeholder </li><br>
+                <li><u>placeholder</u>
+                    placeholder</li><br>
+                <li><u>placeholder</u>
+                    placeholder
+                </li>
+            </ul>
+
+            </p>
+        </div>
+
+        <div class="item8">
+            <img src="https://mail.google.com/mail/u/0?ui=2&ik=2c53434a31&attid=0.1&permmsgid=msg-a:r-3346358501543158164&th=19664bbe28a1dcda&view=att&disp=safe&realattid=f_m9uhxfjj0&zw"
+                style="height: 300px;
+            border: 10px double black;
+            padding: 10px;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: black;
+            border-radius: 5px;
+            box-shadow: 10px 10px 100px black">
             <p>
             <h2>
                 placeholder
