--- a/myproject/templates/plants.html
+++ b/myproject/templates/plants.html
@@ -44,7 +44,7 @@
         header nav {
             display: inline-block; /* Adjusts to fit nav links */
             margin-top: 10px;
-            background: rgba(255, 255, 255, 0.7); /* Optional for legibility */
+            background: rgba(255, 255, 255, 0.7); 
             border-radius: 8px; /* Optional: rounded appearance */
             padding: 8px 16px;
         }
@@ -66,7 +66,7 @@
             display: grid;
             grid-template-columns: auto auto auto;
             gap: 10px;
-            background-color: whitesmoke;
+            background: linear-gradient(to bottom, rgb(14, 95, 55), rgb(28, 108, 51), rgb(175, 236, 177));
             padding: 10px;
         }
 
