--- a/myproject/templates/home.html
+++ b/myproject/templates/home.html
@@ -125,6 +125,7 @@
 
     footer {
       font-family: 'Abril Fatface';
+      color: white;
       background-color: black;
       text-align: center;
       padding: 10px 0;
