FAQ html updates

--- a/myproject/templates/FAQ.html
+++ b/myproject/templates/FAQ.html
@@ -188,9 +188,8 @@
           <span class="icon">+</span>
         </button>
         <div class="faq-answer">
-          <p> placeholder:
-            
-        </p>
+          <p> A plant application refers to a mobile or software app that may be designed but is not limited to help users care for, identify, obtain information and/or maintain their plants and gardens. These applications use technology to troubleshoot plant problems, provide individual care guides, provide information on plants, identify plant species, track growth, and/or send reminders for essential tasks like watering, fertilizing, pruning, and pest management.
+          </p>
         </div>
       </div>
       
@@ -200,7 +199,7 @@
           <span class="icon">+</span>
         </button>
         <div class="faq-answer">
-          <p>Yes, please visit our contact us page.
+          <p>Yes, please visit our contact us page and suggest a new plant by using the message prompts.
         </p>
         </div>
       </div>
@@ -208,11 +207,11 @@
 
           <div class="faq-item">
         <button class="faq-question">
-          Do you offer international shipping?
+          Are you looking for help developing this app?
           <span class="icon">+</span>
         </button>
         <div class="faq-answer">
-          <p>No, unfortunately we do not offer international shipping at this time.</p>
+          <p>Thank you but no, I am not seeking outside help at this time.</p>
         </div>
       </div>
       
